# Aureal

./: README.md  TOC.md
docs/: research_goals.md
labs/emulation/: a3d_audio_studio_plan.md  a3d_emulation_options.md  a3d_technical_analysis.md  a3d_test_environment_setup.md
labs/research/: SUMMARY.md
src/scrapers/vogons_scraper/: Cargo.toml  README.md
src/scrapers/vogons_scraper/src/: main.rs
tests/: README.md
tests/data/: vogons_sample_page.html
tests/scrapers/vogons_scraper/: basic_tests.rs
