[package]
name = "vogons_scraper"
version = "0.1.0"
edition = "2024"
description = "Web scraper for VOGONS forums to collect Aureal/A3D information"
authors = ["Aureal Archaeology Project"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.18.0"
selectors = "0.25.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
url = "2.4"
